# pinchive

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  docker-bake.hcl  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: launch.json
.github/workflows/: docker-publish.yml
app/: __init__.py  appsettings.py  auth.py  config.py  db.py  dedup.py  downloader.py  i18n.py  main.py  models.py  refresh_browser.py  tasks.py  timefmt.py
docs/: credential-refresh.md
scripts/: deploy-dev.sh  fetch_assets.ps1  fetch_assets.sh
static/css/: app.css
templates/: base.html  board_detail.html  credentials.html  duplicates.html  index.html  settings.html
templates/partials/: board_card.html  credential_row.html  dedup_status.html  hero_stats.html  pagination.html
tests/: conftest.py  test_api.py  test_appsettings.py  test_auth.py  test_db_migration.py  test_dedup.py  test_downloader.py  test_i18n.py  test_models.py  test_tasks.py  test_timefmt.py
