[project]
name = "pinchive"
version = "0.1.0"
description = "Self-hosted Pinterest board archiver. Inspired by TubeArchivist."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aroxu" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "arq>=0.26",
    "redis>=5.0",
    "gallery-dl>=1.27",
    "yt-dlp>=2024.8",  # gallery-dl's fallback for some Pinterest video/story pins
    "httpx>=0.27",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Optional automatic cookie refresh via a headless browser.
# Heavy (~300MB). Only install if you want unattended re-login.
refresh = ["playwright>=1.44"]
dev = ["ruff>=0.5", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
